@@ -14,6 +14,8 @@ SIGNIFICANT USER-VISIBLE CHANGES
 
 NEW FEATURES
 
+    o	New function tkProgressBar() in package tcltk.  This currently
+    	requires Tk >= 8.5 or the BWidget extension.
 
 
 PACKAGE INSTALLATION
